--- a/index.html
+++ b/index.html
@@ -1,1 +1,243 @@
-Hello world
+<!DOCTYPE html>
+<!--[if IE 8 ]><html class="ie" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+
+    <title>Datom – Data intelligence, reimagined.</title>
+
+	<!-- Behavioral Meta Data -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+	<!-- Core Meta Data -->
+	<meta name="author" content="Aether-Themes">
+	<meta name="description" content="Full service landing &amp; coming soon page.">
+	<meta name="keywords" content="template,coming soon,landing page,html5,css3,jquery">
+
+	<!-- Apple Touch Icons -->
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
+
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+	<!-- Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
+
+	<!-- Styles -->
+	<link rel="stylesheet" type="text/css" href="css/loader.css"/>
+	<link rel="stylesheet" type="text/css" href="css/framework.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+
+	<!--[if lt IE 9]>
+		<link rel="stylesheet" type="text/css" href="css/ie.css" />
+	<![endif]-->
+
+	<!-- Javascript -->
+	<script src="js/modernizr.js"></script>
+	<script src="js/jquery.js"></script>
+</head>
+<body>
+	<section id="hero" class="dark">
+		<ul id="scene" class="scene"
+			data-friction-x="0.1"
+			data-friction-y="0.1"
+			data-scalar-x="25"
+			data-scalar-y="15"
+			>
+			<li class="layer" data-depth="0.00"></li>
+
+			<!-- BG -->
+			<li class="layer" data-depth="0.10" ><div class="background" data-0="transform: translate3d(0px, 0px, 0px);" data-top-bottom="transform: translate3d(0px, 300%, 0px);"></div></li>
+			<li class="layer" data-depth="0.15"><div class="triangles"></div></li>
+			
+			<!-- Hero -->
+			<li class="layer" data-depth="0.20"><div class="title" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img class="has-retina" src="images/logo.png" alt="Opia"><span class="line"></span></div></li>
+			<li class="layer" data-depth="0.30">
+				<div class="hero-content" data-0="opacity: 1;" data-top-bottom="opacity: 0;">
+					<h1>Data Intelligence, Reimagined</h1>
+				</div>
+			</li>
+
+			<!-- Flakes -->
+			<li class="layer" data-depth="0.40">
+				<div class="depth-1 flake1" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth1/flakes1.png" alt="flake"></div>
+				<div class="depth-1 flake2" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth1/flakes2.png" alt="flake"></div>
+				<div class="depth-1 flake3" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth1/flakes3.png" alt="flake"></div>
+				<div class="depth-1 flake4" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth1/flakes4.png" alt="flake"></div>
+			</li>
+			<li class="layer" data-depth="0.50">
+				<div class="depth-2 flake1" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth2/flakes1.png" alt="flake"></div>
+			</li>
+			<li class="layer" data-depth="0.60">
+				<div class="depth-3 flake1" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth3/flakes1.png" alt="flake"></div>
+				<div class="depth-3 flake2" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth3/flakes2.png" alt="flake"></div>
+				<div class="depth-3 flake3" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth3/flakes3.png" alt="flake"></div>
+				<div class="depth-3 flake4" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth3/flakes4.png" alt="flake"></div>
+			</li>
+			<li class="layer" data-depth="0.80"><div class="depth-4" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth4/flakes.png" alt="flake"></div></li>
+			<li class="layer" data-depth="1.00"><div class="depth-5" data-0="opacity: 1;" data-top-bottom="opacity: 0;"><img src="images/flakes-dark/depth5/flakes.png" alt="flake"></div></li>
+		</ul>
+		<a id="action" href="#intro"></a>
+	</section>
+
+	<section id="intro" class="container center padded">
+
+		<!-- Intro -->
+		<div class="row">
+			<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+				<h3>About Us</h3>
+				<span class="line"></span>
+				<h2>Ten years of experience leading data projects.</h2>
+                <p>We are fervent believers in data-driven decision making – from the executive suite all the way to daily operations. We aim to uncover insights on how to become more efficient, how to market products and services more effectively, and how to satisfy customers and win their loyalty.</p>
+			</div>
+		</div>
+
+	</section>
+
+	<section class="container padded-bottom center-mobile relative list">
+
+		<!-- Blocks -->
+		<div class="row">
+			<div class="block col-xs-12 col-sm-5">
+				<i class="icon icon-basic-compass"></i>
+				<h3>data strategy</h3>
+                <p>We assess your existing strategy, estimate the expected impact of its completion, prioritize vital gaps in strategy components, and map capabilities to solve pain points. This includes preparing baseline summaries by line of business, and promoting the benefits of addressing gaps.</p>
+			</div>
+			<div class="block col-xs-12 col-sm-5 col-sm-offset-2">
+				<i class="icon icon-basic-webpage-img-txt"></i>
+				<h3>business Reporting</h3>
+                <p>We cover all forms of ad-hoc and templated reports generated from your data, in order to create snapshots of specific aspects of your organization's operations. This includes drawing on heterogenous data from multiple sources, and merging them together seamlessly.</p>
+			</div>
+		</div>
+
+		<span class="separator"></span>
+
+		<!-- Blocks -->
+		<div class="row">
+			<div class="block col-xs-12 col-sm-5">
+				<i class="icon icon-basic-server2"></i>
+				<h3>information systems</h3>
+                <p>We apply intelligence to your reports, and collaborate with you to produce score cards and Key Performance Indicators (KPIs) that show whether your standards are being met. We integrate with your existing portal dashboards to present a clear analysis of the current health of your organization.</p>
+			</div>
+			<div class="col-xs-12 col-sm-5 col-sm-offset-2">	
+				<i class="icon icon-basic-lightbulb"></i>
+				<h3>predictive analytics</h3>
+                <p>We utilize advanced statistical and machine learning methods to perform pricing optimization, market basket analytics, forecasting, and clustering to identify and project trends. We look into the future, and help you see where you are going instead of where you've been.</p>
+			</div>
+		</div>
+	</section>
+
+	<section class="full padded-top center dark" style="background-image: url(images/dark-image.jpg);">
+		<div class="container">
+
+			<!-- Intro -->
+			<div class="row">
+				<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+					<h3>Work</h3>
+					<span class="line"></span>
+					<h2>We live and breathe data, every day.</h2>
+					<p>Distilling insights that transform brands &amp; grow businesses.</p>
+				</div>
+			</div>
+
+			<!-- Folio pt.1 -->
+			<div class="row">
+				<div class="col-xs-12 padded-top">
+					<ul class="folio-list">
+                        <li><a class ="lightbox" href="images/portfolio/project5.jpg" title="Eternal Youth® Trading System"><img src="images/portfolio/project5.jpg" alt="thumbnail"></a></li>
+						<li><a class ="lightbox" href="images/portfolio/project2.jpg" title="Leversense® BioSensor Platform"><img src="images/portfolio/project2.jpg" alt="thumbnail"></a></li>
+                        <li><a class ="lightbox" href="images/portfolio/project6.jpg" title="Mabogo® Strategy Hub"><img src="images/portfolio/project6.jpg" alt="thumbnail"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="full padded-bottom center" style="background-image: url(images/light-image.jpg);">
+		<div class="container">
+
+			<!-- Folio pt.2 -->
+			<div class="row">
+				<div class="col-xs-12 padded-bottom">
+					<ul class="folio-list dropshadow">
+                        <li><a class ="lightbox" href="images/portfolio/project1.jpg" title="Tilt® User Influence Graph"><img src="images/portfolio/project1.jpg" alt="thumbnail"></a></li>
+                        <li><a class ="lightbox" href="images/portfolio/project4.jpg" title="CARDFREE® Gift Card Platform"><img src="images/portfolio/project4.jpg" alt="thumbnail"></a></li>
+                        <li><a class ="lightbox" href="images/portfolio/project3.jpg" title="Hosting.com® Network Services Layer"><img src="images/portfolio/project3.jpg" alt="thumbnail"></a></li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- Quote -->
+			<div class="row">
+				<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+					<span class="large-accent">“</span>
+                    <h2>Information is the oil of the 21st century, and analytics is the combustion engine.</h2>
+					<span class="line no-accent"></span>
+                    <h3>Peter Sondergaard</h3>
+					<h4>SVP, Gartner Research</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="container padded center">
+
+		<!-- Subscribe -->
+		<div class="row">
+			<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+				<h3>contact</h3>
+				<span class="line"></span>
+				<p>We repond to all inquiries within one business day.</p>
+
+				<form id="contact" name="contact" method="post" novalidate="novalidate">
+				<fieldset>
+					<label for="name">Name</label>
+					<input type="text" name="name" id="name" />
+					<label for="email">Email</label>
+			        <input type="email" name="email" id="email" />
+			        <label for="message">Message</label>
+			        <textarea name="message" id="message"></textarea>
+			        <input id="submit" type="submit" name="submit" value="Send Email">
+				</fieldset>
+			</form>
+
+			<div id="success">
+				<p>Thank you for your message!</p>
+			</div>
+
+			<div id="error">
+				<p>Something went wrong, please try refreshing and submitting the form again.</p>
+			</div>
+			</div>
+		</div>
+
+		<!-- Footer -->
+		<div class="row padded">
+			<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+				<span class="line no-accent"></span>
+				<p class="copyright">© 2016 Datom. All rights reserved.</p>
+			</div>
+		</div>
+	</section>
+
+	<!-- Begin Pageloader -->
+	<div id="pageloader">
+		<!-- Content -->
+		<div class="pageloader-content">
+			<h4>Loading...</h4>
+			<span class="progress"></span>
+		</div><!-- END Content -->
+	</div><!-- END Pageloader -->
+
+	<!-- Javascript -->
+	<script src="js/loader.js"></script>
+	<script src="js/parallax.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/main.js"></script>
+</body>
+</html>
