--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Opia. Full service landing &amp; coming soon page.</title>
+    <title>Datom – Data intelligence, reimagined.</title>
 
 	<!-- Behavioral Meta Data -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -13,11 +13,8 @@
 
 	<!-- Core Meta Data -->
 	<meta name="author" content="Aether-Themes">
-	<meta name="description" content="Full service landing &amp; coming soon page.">
-	<meta name="keywords" content="template,coming soon,landing page,html5,css3,jquery">
-
-	<!-- Favicon -->
-	<link rel="shortcut icon" href="favicon.png" type="image/png">
+    <meta name="description" content="Data intelligence, reimagined.">
+    <meta name="keywords" content="data science consulting,data science strategy,data science projects,data science outsourcing,data science experts,data science,data,big data,analytics,business intelligence,machine learning,predictive analytics,information systems">
 
 	<!-- Apple Touch Icons -->
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
@@ -51,7 +48,7 @@
 			<span class="line"></span>
 			<h1>Oops.</h1>
 			<p class="sub-title">Something went wrong.</p>
-			<a class="button" href="index.html">Go back home</a>
+			<a class="button" href="/">Go back home</a>
 		</div>
 	</div>
 
