--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 	<!-- Core Meta Data -->
 	<meta name="author" content="Aether-Themes">
-	<meta name="description" content="Full service landing &amp; coming soon page.">
-	<meta name="keywords" content="template,coming soon,landing page,html5,css3,jquery">
+	<meta name="description" content="Data intelligence, reimagined.">
+	<meta name="keywords" content="data science consulting,data science strategy,data science projects,data science outsourcing,data science experts,data science,data,big data,analytics,business intelligence,machine learning,predictive analytics,information systems">
 
 	<!-- Apple Touch Icons -->
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
