Better description in meta

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 
 	<!-- Core Meta Data -->
 	<meta name="author" content="Aether-Themes">
-    <meta name="description" content="Data intelligence, reimagined.">
+    <meta name="description" content="Datom is a leading provider of powerful data analytics and services that include Data Driven Marketing, Business Intelligence, and Predictive Analytics.">
     <meta name="keywords" content="data science consulting,data science strategy,data science projects,data science outsourcing,data science experts,data science,data,big data,analytics,business intelligence,machine learning,predictive analytics,information systems">
 
 	<!-- Apple Touch Icons -->
