--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
            </div>
             
             <!-- Image -->
-            <div class="col-md-6"> <img class="img-responsive" src="images/process.jpg" alt=" "> </div>
+            <div class="col-md-6"> <img class="img-responsive" src="images/process.png" alt=" "> </div>
         </div>
       </div>
     </section>
