--- a/index.html
+++ b/index.html
@@ -343,11 +343,19 @@
             <li>
               <div class="avatar"> <img src="images/avatar-2.png" alt="" >
                   <h5>William Wolf</h5><h6>Tilt  / <span>Director of Technology</span></h6>
-                <p>“Testimonial goes here.”</p>
+                <p>“Ali is an incredibly hard worker who loves to dive into problems and challenges of any magnitude. I've watched him tackle challenges across multiple teams, while leading the charge on technical decisions, data gathering, and data analysis. He has a great sense of what data matters, and how best to slice and dice it into something meaningful. He's also able to communicate and articulate the process, and his insights from the data to his team, and to the broader business.”</p>
               </div>
             </li>
             
             <!-- Slide 3 -->
+            <li>
+              <div class="avatar"> <img src="images/avatar-4.png" alt="" >
+                  <h5>William Walther</h5><h6>WaltherCorp / <span>Co-founder &amp; CEO</span></h6>
+                <p>“Ali has consistently delivered above and beyond what was expected of him for each of the projects in which I've had the pleasure to work with him for XVenturesGroup. His formal knowledge and modeling with regards to Data Science has proven time and time again, the value of setting up these systems at every stage in the business cycle.  Using his unique background, he is able to utilize all the tools available to him, from business intelligence and predictive analytics to software engineering.”</p>
+              </div>
+          </li>
+
+            <!-- Slide 4 -->
             <li>
               <div class="avatar"> <img src="images/avatar-3.png" alt="" >
                   <h5>Peter Nagy</h5><h6>InvisALERT Solutions / <span>Co-founder &amp; CEO</span></h6>
@@ -355,15 +363,7 @@
               </div>
             </li>
 
-            <!-- Slide 4 -->
-            <li>
-              <div class="avatar"> <img src="images/avatar-4.png" alt="" >
-                  <h5>William Walther</h5><h6>WaltherCorp / <span>Co-founder &amp; CEO</span></h6>
-                <p>“Ali has consistently delivered above and beyond what was expected of him for each of the projects in which I've had the pleasure to work with him for XVenturesGroup. His formal knowledge and modeling with regards to Data Science has proven time and time again, the value of setting up these systems at every stage in the business cycle.  Using his unique background, he is able to utilize all the tools available to him, from business intelligence and predictive analytics to software engineering.”</p>
-              </div>
-            </li>
-            
-            <!-- Slide 4 -->
+            <!-- Slide 5 -->
             <li>
               <div class="avatar"> <img src="images/avatar-5.png" alt="" >
                   <h5>Bobak Tavangar</h5><h6>Jellyfish AI / <span>Partner</span></h6>
