--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             <h6>Get A Free Quote</h6>
             <div class="quote">
               <form action="https://formspree.io/ali@datomsolutions.com" method="POST">
-                <input class="form-control" type="text" name="name" placeholder="Name">
+                <input class="form-control" type="text" name="name" placeholder="Full Name">
                 <input class="form-control" type="text" name="_replyto" placeholder="Email Address">
                 <textarea class="form-control" name="message" placeholder="Tell us a bit more about yourself and your project"></textarea>
                 <button type="submit" class="btn btn-green">SEND NOW</button>
