--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <section id="about" class="bg-parallax text-center padding-top-80 padding-bottom-80" style="background:url(images/bg/bg-parallax.png) no-repeat;">
       <div class="container">
         <div class="text-center margin-bottom-50">
-            <p class="text-white intro-style font-18px">Datom Solutions is a data science consultancy. We create a competitive advantage for venture-funded startups and financial servive companies by combining domain knowledge with specialist technical skills to deliver high-impact statistical insights, predictive models and data-driven business advice.</p><br/><br/>
+            <p class="text-white intro-style font-18px">Datom Solutions is a data science consultancy. We create a competitive advantage for venture-funded startups and financial service companies by combining domain knowledge with specialist technical skills to deliver high-impact statistical insights, predictive models and data-driven business advice.</p><br/><br/>
             <p class="text-white intro-style font-18px">We are fervent believers in data-driven decision making – from the executive suite all the way to daily operations. We aim to uncover insights on how to become more efficient, how to market products and services more effectively, and how to satisfy customers and win their loyalty.</p>
         </div>
         <a href="#contact" class="btn btn-green">Learn More</a> </div>
@@ -324,8 +324,7 @@
         <!-- Tittle -->
         <div class="heading-block white-text text-center margin-bottom-60">
           <h2>Why Our Customers <i class="fa fa-heart white-text"></i> us! </h2>
-          <span class="intro-style">Do you want to improve the online visibility of your brand and 
-          drive more relevant traffic to your website? </span> </div>
+          <span class="intro-style">A few of the amazing folks we've worked with</span> </div>
         
         <!-- Testi Slider -->
         <div class="testi-slides-flex">
