--- a/index.html
+++ b/index.html
@@ -472,6 +472,15 @@
 <script src="js/vendors/jquery.isotope.min.js"></script> 
 <script src="js/vendors/owl.carousel.min.js"></script> 
 <script src="js/vendors/jquery.sticky.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-90527953-1', 'auto');
+  ga('send', 'pageview');
+</script>
 
 <!-- SLIDER REVOLUTION 4.x SCRIPTS  --> 
 <script type="text/javascript" src="rs-plugin/js/jquery.themepunch.tools.min.js"></script> 
