Add SEO meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="author" content="M_Adnan" />
+<meta name="author" content="Datom Solutions" />
+<meta name="description" content="Datom Solutions is a data science consultancy. We create a competitive advantage for venture-funded startups and financial service companies by combining domain knowledge with specialist technical skills to deliver high-impact statistical insights, predictive models and data-driven business advice.">
 <!-- Document Title -->
 <title>Datom Solutions</title>
 
