--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         
         <!-- Tittle -->
         <div class="heading-block text-center margin-bottom-60">
-          <h2>Our Work Flow </h2>
+          <h2>What Steps Are Involved</h2>
           <span class="intro-style">Our approach to data science challenges is highly pragmatic and interdisciplinary – we start with a brief, inexpensive assessment before executing on the opportunity</span> </div>
         <div class="text-center"> <img src="images/work-flow.jpg" alt=" "> </div>
         <ul class="row padding-left-50 padding-right-50">
