--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 
+<!-- OG tags -->
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Datom Solutions | Data Science Business Services" />
+<meta property="og:description" content="Datom Solutions is a data science consultancy. We create a competitive advantage for venture-funded startups and financial service companies by combining domain knowledge with specialist technical skills to deliver high-impact statistical insights, predictive models and data-driven business advice." />
+<meta property="og:url" content="https://www.datomsolutions.com" />
 
 <!-- FontsOnline -->
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Montserrat:400,700|Alegreya+Sans:400,500,700,800,900,300,100' rel='stylesheet' type='text/css'>
