--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="author" content="Datom Solutions" />
 <meta name="description" content="Datom Solutions is a data science consultancy. We create a competitive advantage for venture-funded startups and financial service companies by combining domain knowledge with specialist technical skills to deliver high-impact statistical insights, predictive models and data-driven business advice.">
+
+<meta name="keywords" content="data science data-science scientist
+    							analysis analytics business intelligence
+    							predictive modelling predictive-modelling
+    							machine learning machine-learning ML
+                                statistical learning statistical-learning
+                                statistics stats business intelligence information
+                                systems rstats research reproducible reporting
+    							survival sentiment analysis
+    							bayes bayesian inference mcmc pymc
+                                reinforcement operations science risk assessment
+                                enterprise ontology supervised unsupervised learning
+    							automation linear logistic regression
+    							feature reduction deep learning neural networks
+    							decision trees random forests support vector machines
+    							life insurance insurers brokers reinsurance reinsurers
+    							consulting consultants software">
 <!-- Document Title -->
 <title>Datom Solutions | Data Science Business Services</title>
 
