Make sure H1 tag is present

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                   data-endelementdelay="0.1"
                   data-endspeed="300" 
                   data-captionhidden="on"
-                  style="color: #fff; font-size: 48px; font-weight: normal; letter-spacing:0px; line-height:55px;"> Our Data Science Team,<br>
-              Your Competitive Edge </div>
+                  style="font-size: 48px; font-weight: normal; letter-spacing:0px; line-height:55px;"><h1 style="color: #fff; font-family: 'Open Sans', sans-serif; font-size: 48px; letter-spacing: 0px; line-height: 55px; margin: 0; padding: 0">Our Data Science Team,<br>
+                      Your Competitive Edge</h1></div>
             
             <!-- Layer -->
             <div class="tp-caption sfb tp-resizeme" 
