--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     							life insurance insurers brokers reinsurance reinsurers
     							consulting consultants software">
 <!-- Document Title -->
-<title>Datom Solutions | Data Science Business Services</title>
+<title>Data Science Business Services | Datom Solutions</title>
 
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
@@ -47,7 +47,7 @@
 <!-- OG tags -->
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Datom Solutions | Data Science Business Services" />
+<meta property="og:title" content="Data Science Business Services | Datom Solutions" />
 <meta property="og:description" content="Datom Solutions is a data science consultancy. We create a competitive advantage for venture-funded startups and financial service companies by combining domain knowledge with specialist technical skills to deliver high-impact statistical insights, predictive models and data-driven business advice." />
 <meta property="og:url" content="https://www.datomsolutions.com" />
 
