--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <!-- Tittle -->
         <div class="heading-block text-center margin-bottom-60">
           <h2>What Services We Offer </h2>
-          <span class="intro-style">From marketplaces and e-commerce, to FinTech and insurance, we have a decade of domain-specific knowledge along with our analytic capabilities</span> </div>
+          <span class="intro-style">From marketplaces and e-commerce, to genomics, FinTech and insurance, we have a decade of domain-specific knowledge along with our analytic capabilities</span> </div>
         <div class="text-center"> <img src="images/services.png" style="margin-bottom: 80px" alt="Services Diagram"> </div>
       </div>
     </section>
