Fix minor issues

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <!-- Social Icon -->
           <div class="col-md-9">
             <ul class="some-info font-montserrat">
-                <li><i class="fa fa-phone"></i><a href="tel:+12152050971">(215) 205-097</a></li>
+                <li><i class="fa fa-phone"></i><a href="tel:+12152050971">(215) 205-0971</a></li>
                 <li><i class="fa fa-envelope"></i><a href="mailto:ali@datomsolutions.com">ali@datomsolutions.com</a></li>
                 <li><i class="fa fa-skype"></i><a href="skype:anariio?call">anariio</a></li>
             </ul>
@@ -275,7 +275,7 @@
         <!-- Tittle -->
         <div class="heading-block text-center margin-bottom-60">
           <h2>What Steps Are Involved</h2>
-          <span class="intro-style">Our approach to data science challenges is highly pragmatic and interdisciplinary – we start with a brief, inexpensive assessment before executing on the opportunity</span> </div>
+          <span class="intro-style">Our approach to data science challenges is highly pragmatic and interdisciplinary:<br/>we start with a brief, inexpensive assessment before executing on the opportunity</span> </div>
         <div class="text-center"> <img src="images/work-flow.jpg" alt="Workflow Diagram"> </div>
         <ul class="row padding-left-50 padding-right-50">
           <li class="col-sm-3">
@@ -464,7 +464,7 @@
     <!-- Rights -->
     <div class="rights">
       <div class="container" style="text-align: center">
-        <p>Copyright © 2017 Datom Solutions. All Rights Reserved.</p>
+        <p style="color: #c5cbd3">Copyright © 2017 Datom Solutions. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
