--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   data-endelementdelay="0.1" 
                   data-endspeed="300" 
                   data-captionhidden="on"
-                  style="color: #fff; font-size: 30px; font-weight: normal; line-height:36px;"> Are you ready to unlock the power of your <br>data, whether it's coming from a mobile app,<br>website, data center, or cloud?</div>
+                  style="color: #fff; font-size: 30px; font-weight: normal; line-height:36px;">Unlock the power of your data,<br> whether it's coming from a mobile app,<br>website, data center, or cloud</div>
             
             <!-- Layer -->
             <div class="tp-caption sfb tp-resizeme font-crimson" 
