--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
   <header class="header coporate-header">
     <div class="sticky">
       <div class="container">
-        <div class="logo"> <a href="#home"><img src="images/logo.png" alt=""></a> </div>
+        <div class="logo"> <a href="#home" class="page-scroll"><img src="images/logo.png" alt=""></a> </div>
         
         <!-- Nav -->
         <nav>
           <ul id="ownmenu" class="ownmenu">
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#strategy"> STRATEGY </a></li>
-            <li><a href="#services"> SERVICES </a></li>
-            <li><a href="#about"> ABOUT </a></li>
-            <li><a href="#case-studies"> CASE STUDIES </a></li>
-            <li><a href="#testimonials"> TESTIMONIALS </a></li>
-            <li><a href="#contact"> CONTACT</a></li>
+            <li><a class="page-scroll" href="#home">HOME</a></li>
+            <li><a class="page-scroll" href="#strategy"> STRATEGY </a></li>
+            <li><a class="page-scroll" href="#services"> SERVICES </a></li>
+            <li><a class="page-scroll" href="#about"> ABOUT </a></li>
+            <li><a class="page-scroll" href="#case-studies"> CASE STUDIES </a></li>
+            <li><a class="page-scroll" href="#testimonials"> TESTIMONIALS </a></li>
+            <li><a class="page-scroll" href="#contact"> CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -191,7 +191,7 @@
                   data-endelementdelay="0.1" 
                   data-endspeed="300" 
                   data-captionhidden="on"
-                  style=""> <a href="#services" class="btn btn-white">Learn More</a> <a href="#contact" class="btn btn-green margin-left-20">Get a quote</a> </div>
+                  style=""> <a href="#services" class="btn btn-white page-scroll">Learn More</a> <a href="#contact" class="btn btn-green margin-left-20 page-scroll">Get a quote</a> </div>
           </li>
         </ul>
       </div>
@@ -266,7 +266,7 @@
             <p class="text-white intro-style font-18px">Datom Solutions is a data science consultancy. We create a competitive advantage for venture-funded startups and financial service companies by combining domain knowledge with specialist technical skills to deliver high-impact statistical insights, predictive models and data-driven business advice.</p><br/><br/>
             <p class="text-white intro-style font-18px">We are fervent believers in data-driven decision making – from the executive suite all the way to daily operations. We aim to uncover insights on how to become more efficient, how to market products and services more effectively, and how to satisfy customers and win their loyalty.</p>
         </div>
-        <a href="#contact" class="btn btn-green">Learn More</a> </div>
+        <a href="#contact" class="btn btn-green page-scroll">Learn More</a> </div>
     </section>
 
     <!-- Flow Work  -->
@@ -314,7 +314,7 @@
               <p class="font-14px line-height-30">Whether you are using Tableau, Chartio, PowerBI, Looker, Qlikview, Cognos, or some other analytic reporting solution, we augment your dashboarding and reporting capabilities to communicate the vital insights your organization needs to thrive.</p>
 
             <!-- Buttons --> 
-            <a href="#contact" class="btn btn-green margin-top-20">LEARN MORE</a> </div>
+            <a href="#contact" class="btn btn-green margin-top-20 page-scroll">LEARN MORE</a> </div>
 
             </div>
             
@@ -526,6 +526,7 @@
 
 <!-- JavaScripts --> 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 <script src="//cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/jquery.flexslider-min.js"></script> 
 <script src="//cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script> 
