--- a/services.html
+++ b/services.html
@@ -14,8 +14,8 @@ layout: default
   <div class="container"> 
 
     <div class="heading-block text-center margin-bottom-60">
-      <h2>What Steps Are Involved.</h2>
-      <span class="intro-style">Our approach to data science challenges is highly pragmatic and interdisciplinary:<br/>we start with a brief, inexpensive assessment before executing on the opportunity</span> </div>
+      <h2>What Steps Are Involved</h2>
+      <span class="intro-style">Our approach to data science challenges is highly pragmatic and interdisciplinary:<br/>we start with a brief, inexpensive assessment before executing on the opportunity.</span> </div>
     <div class="text-center"> <img src="images/work-flow.jpg" alt="Workflow Diagram"> </div>
     <ul class="row padding-left-50 padding-right-50">
       <li class="col-sm-3">
